class Tienda {
    constructor(nombre,contacto,dinero_caja,inventario){
        this.nombre = nombre;
        this.contacto = contacto;
        this.dinero_caja = dinero_caja;
        this.bodega = inventario;
        }
    }   

export default Tienda;